--- a/Develop/assets/style.css
+++ b/Develop/assets/style.css
@@ -8,35 +8,31 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     background-color: #2a607c;
 }
 
-.header h1 {
+header h1 {
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .en {
     color: #d9dcd6;
 }
 
-.header div {
+header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
+header div nav a {
     margin-left: 25px;
 }
 
-.header,
+header,
 a,
 .search-engine-optimization,
 .online-reputation-management,
@@ -47,14 +43,14 @@ a,
     color: #ffffff;
 }
 
-.header h1,
-.header div ul li,
+header h1,
+header div nav a,
 .content {
     display: inline-block;
 
 }
 
-.header div,
+header div,
 .search-engine-optimization,
 .online-reputation-management,
 .social-media-marketing,
@@ -63,14 +59,13 @@ a,
 
 }
 
-.header,
-.footer {
+header,
+footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
 }
 
-.header div,
-.footer h2 {
+header div,
+footer h2 {
     font-size: 20px;
 }
 
@@ -82,7 +77,7 @@ a {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("../assets/images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -160,7 +155,7 @@ p {
     max-width: 150px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     text-align: center;
