--- a/assets/style.css
+++ b/assets/style.css
@@ -21,90 +21,72 @@ header h1 .en {
     color: #d9dcd6;
 }
 
-header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-size: 20px;
-}
-
-header div nav a {
-    margin-left: 25px;
-}
-
-header,
-a,
-.search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing,
-.benefit-lead,
-.benefit-brand,
-.benefit-cost {
-    color: #ffffff;
-}
-
 header h1,
-header div nav a,
-.content {
-    display: inline-block;
-
-}
-
-header div,
-.search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing,
-.benefits {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-}
-
-header,
 footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-header div,
-footer h2 {
-    font-size: 20px;
+header nav {
+    padding-top: 20px;
+    margin-right: 20px;
+    float: right;
 }
 
-a {
+header nav a {
+    margin-left: 25px;
     text-decoration: none;
+}
+
+header,
+a,
+.content,
+.benefit {
+    color: #ffffff;
+}
+
+header h1,
+header nav a,
+.content-section {
+    display: inline-block;
+}
+
+header nav,
+.content,
+.benefits-section {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+header nav,
+footer h2 {
+    font-size: 20px;
 }
 
 .hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../assets/images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
 
-.content {
+.content-section {
     width: 75%;
     margin-left: 20px;
 }
 
-.search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing {
+.content {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     background-color: #0072bb;
 }
 
-.search-engine-optimization img,
-.online-reputation-management img,
-.social-media-marketing img {
+.content img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2,
-.online-reputation-management h2,
-.social-media-marketing h2 {
+.content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -123,33 +105,25 @@ p {
     font-size: 16px;
 }
 
-
-.benefits {
+.benefits-section {
     margin-right: 20px;
     padding: 20px;
-    clear: both;
     float: right;
     width: 20%;
     height: 100%;
     background-color: #2589bd;
 }
 
-.benefit-lead,
-.benefit-brand,
-.benefit-cost {
+.benefit {
     margin-bottom: 32px;
 }
 
-.benefit-lead h3,
-.benefit-brand h3,
-.benefit-cost h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img,
-.benefit-brand img,
-.benefit-cost img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -157,6 +131,5 @@ p {
 
 footer {
     padding: 30px;
-    clear: both;
     text-align: center;
 }
