--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,12 @@
+/* Universal Selector */
 * {
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
 }
 
 body {
     background-color: #d9dcd6;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 header {
@@ -13,89 +14,89 @@ header {
     background-color: #2a607c;
 }
 
-header h1 {
+h1 {
     font-size: 48px;
 }
 
-header h1 .en {
+/* Change the color of the "en" in Broadwenway */
+.en {
     color: #d9dcd6;
 }
 
-header h1,
+h1,
 footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-header nav {
+nav {
     padding-top: 20px;
     margin-right: 20px;
     float: right;
 }
 
-header nav a {
+/* Items in the navigation bar */
+nav a {
     margin-left: 25px;
+    /* Removes the underline default for anchors tags */
     text-decoration: none;
 }
 
 header,
 a,
-.content,
-.benefit {
+article,
+aside {
     color: #ffffff;
 }
 
-header h1,
-header nav a,
+h1,
+a,
 .content-section {
     display: inline-block;
 }
 
-header nav,
-.content,
-.benefits-section {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-}
-
-header nav,
+nav,
 footer h2 {
     font-size: 20px;
 }
 
-.hero {
+/* Adjusts the size of the image to fit the width of the screen and reduces the height */
+figure img {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-size: cover;
-    background-position: center;
 }
 
+/* Reduces the width to make room for the sidebar */
 .content-section {
     width: 75%;
     margin-left: 20px;
 }
 
-.content {
+/* Added margin-bottom to separate the articles */
+article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     background-color: #0072bb;
 }
 
-.content img {
+/* Places a max height to ensure the image it is within the section */
+article img {
     max-height: 200px;
 }
 
-.content h2 {
+article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
+/* The images in the article with this class are moved to the left side */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/* The images in the article with this class are moved to the right side */
 .float-right {
     float: right;
     margin-left: 25px;
@@ -105,25 +106,28 @@ p {
     font-size: 16px;
 }
 
+/* Positions the sidebar to the right of the web page */
 .benefits-section {
     margin-right: 20px;
     padding: 20px;
     float: right;
+    /* Left the remaining 5% of the total width to create a space between the sections. */
     width: 20%;
-    height: 100%;
     background-color: #2589bd;
 }
 
-.benefit {
+/* Creates a space between the aside elements */
+aside {
     margin-bottom: 32px;
 }
 
-.benefit h3 {
+aside h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit img {
+/* Blocks the image to ensure it remains centered and places a max width to ensure it is within the section */
+aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
