--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Universal Selector */
 * {
-    box-sizing: border-box;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -28,14 +28,15 @@ footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+/* Keeps the navigation bar on the right side of the page */
 nav {
-    padding-top: 20px;
-    margin-right: 20px;
     float: right;
+    margin-right: 20px;
+    padding-top: 20px;
 }
 
 /* Items in the navigation bar */
-nav a {
+a {
     margin-left: 25px;
     /* Removes the underline default for anchors tags */
     text-decoration: none;
@@ -43,30 +44,32 @@ nav a {
 
 header,
 a,
-article {
+section,
+aside {
     color: #ffffff;
 }
 
 h1,
 a,
-article {
+section,
+aside {
     display: inline-block;
 }
 
 nav,
-footer h2 {
+footer h3 {
     font-size: 20px;
 }
 
 /* Adjusts the size of the image to fit the width of the screen and reduces the height */
 figure img {
-    height: 800px;
-    width: 100%;
     margin-bottom: 25px;
+    width: 100%;
+    height: 800px;
 }
 
-/* Added the relative position so it can adjust itself to fit the sidebar */
-article {
+/* Added the relative position so that the sidebar can fit next to it */
+section {
     position: relative;
 }
 
@@ -76,21 +79,21 @@ article {
 }
 
 /* Added margin-bottom to separate the articles and reduced the width to make room for the sidebar */
-section {
+article {
     margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    background-color: #0072bb;
-    width: 75%;
     margin-left: 20px;
+    width: 75%;
+    height: 300px;
+    padding: 50px;
+    background-color: #0072bb;
 }
 
 /* Places a max height to ensure the image it is within the section */
-section img {
+article img {
     max-height: 200px;
 }
 
-section h2 {
+article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -111,13 +114,13 @@ p {
     margin-left: 25px;
 }
 
-/* Positions the sidebar to the right of the web page */
+/* Positions the sidebar to the right of the web page and aligned with the section */
 aside {
     position: absolute;
-    top: 0;
+    top: 1;
     right: 0;
-    width: 20%;
     margin-right: 20px;
+    width: 20%;
     padding: 20px;
     background-color: #2589bd;
 }
@@ -130,11 +133,11 @@ aside h3 {
 /* Blocks the image to ensure it remains centered and places a max width to ensure it is within the section */
 aside img {
     display: block;
-    margin: 10px auto;
+    margin: 10px auto; 
     max-width: 150px;
 }
 
-/* Creates a space between the aside elements */
+/* Creates a space between elements within the sidebar */
 aside p {
     margin-bottom: 32px;
 }
