--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,23 @@
 /* Universal Selector */
 * {
     margin: 0;
-    box-sizing: border-box;
 }
 
+/* Everything that is included in the body will contain these properties,
+ unless you enter the same property with a different value in that specific selector's declaration to override this rule */
 body {
     background-color: #d9dcd6;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #ffffff;
 }
 
+/* Gives color to the header and the padding makes the webpage name and nav bar have a spacing around them */
 header {
     padding: 20px;
     background-color: #2a607c;
 }
 
+/* Overrides the default size for h1, making it bigger */
 h1 {
     font-size: 48px;
 }
@@ -23,52 +27,51 @@ h1 {
     color: #d9dcd6;
 }
 
+/* This will override the rule applied to body elements for these selectors */
 h1,
 footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-/* Keeps the navigation bar on the right side of the page */
+/* The float keeps the nav bar on the right side of the page,
+ the padding is adding space at the top and the margin on the right of the nav to align it with h1 and make it more visually appealing */
 nav {
     float: right;
     margin-right: 20px;
     padding-top: 20px;
 }
 
-/* Items in the navigation bar */
+/* Items in the nav bar. The margin property has been added to create space between the anchor tags */
 a {
     margin-left: 25px;
-    /* Removes the underline default for anchors tags */
+    /* Removes the underline default for anchors tags and defines its color */
     text-decoration: none;
-}
-
-header,
-a,
-section,
-aside {
     color: #ffffff;
 }
 
+/* Makes the h1 + nav, and section + aside to be displayed horizontally */
 h1,
-a,
+nav,
 section,
 aside {
     display: inline-block;
 }
 
+/* Overrides the default size, making it bigger */
 nav,
 footer h3 {
     font-size: 20px;
 }
 
-/* Adjusts the size of the image to fit the width of the screen and reduces the height */
+/* Adjusts the size of the image to fit the width of the screen and reduces the height,
+ a margin was added at the bottom to create a space between the figure and the section */
 figure img {
     margin-bottom: 25px;
     width: 100%;
     height: 800px;
 }
 
-/* Added the relative position so that the sidebar can fit next to it */
+/* Added the relative position so that the sidebar can fit next to it - need to add absolute position to sidebar */
 section {
     position: relative;
 }
@@ -78,62 +81,76 @@ section {
     display: none;
 }
 
-/* Added margin-bottom to separate the articles and reduced the width to make room for the sidebar */
+/* Added margin at the bottom to create a space between the articles, a margin on the left to make it more centered,
+ also reduced the width to make room for the sidebar and the padding to center the content within the article, making it more visually appealing */
 article {
     margin-bottom: 20px;
     margin-left: 20px;
     width: 75%;
     height: 300px;
     padding: 50px;
+    /* This will override the rule applied to body elements for this selector */
     background-color: #0072bb;
 }
 
-/* Places a max height to ensure the image it is within the section */
+/* Sets a maximum height to ensure the image is inside the article container */
 article img {
     max-height: 200px;
 }
 
+/* Added margin at the bottom to create a space between the h2 and the p */
 article h2 {
     margin-bottom: 20px;
+    /* Overrides the default size, making it bigger */
     font-size: 36px;
 }
 
-p {
-    font-size: 16px;
-}
-
-/* The images in the article with this class are moved to the left side */
+/* The float moves the image in the article with this class to the left side,
+  and a margin was added on the right to create a space between the text and the image */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
-/* The images in the article with this class are moved to the right side */
+/* The float moves the image in the article with this class to the right side,
+  and a margin was added on the left to create a space between the text and the image */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
+/* Specifies how the total width and height of the article and aside are calculated. 
+This property and their respective assigned values of the width and height will keep them aligned next to each other.*/
+article,
+aside {
+    box-sizing: border-box;
+}
+
 /* Positions the sidebar to the right of the web page and aligned with the section */
 aside {
+    /* The absolute position is needed to align it to the article */
     position: absolute;
     top: 1;
     right: 0;
+    /* Added margin on the right to make it more centered and padding to center the content within the article,
+    reduced the width to make it fit next to the article */
     margin-right: 20px;
     width: 20%;
     padding: 20px;
+    /* This will override the rule applied to body elements for this selector */
     background-color: #2589bd;
 }
 
+/* Center text in the middle of the sidebar */
 aside h3 {
-    margin-bottom: 10px;
     text-align: center;
 }
 
-/* Blocks the image to ensure it remains centered and places a max width to ensure it is within the section */
+/* The display blocks the image and the margins will align it to ensure it stays centered,
+ added a max width to make sure it's inside the sidebar */
 aside img {
     display: block;
-    margin: 10px auto; 
+    margin: 10px auto;
     max-width: 150px;
 }
 
@@ -142,7 +159,10 @@ aside p {
     margin-bottom: 32px;
 }
 
+/* Added padding to create a space around the footer and align it in the center of the webpage */
 footer {
     padding: 30px;
     text-align: center;
+    /* This will override the rule applied to body elements for this selector */
+    color: black;
 }
