fixed sidebar bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,10 +132,13 @@ aside {
     position: absolute;
     top: 1;
     right: 0;
+    float: right;
     /* Added margin on the right to make it more centered and padding to center the content within the article,
     reduced the width to make it fit next to the article */
     margin-right: 20px;
     width: 20%;
+    /* 3 articles, each has 300px height + 20px margin-bottom between them = total height of 940px to make the sidebar with the same height */
+    height: 940px;
     padding: 20px;
     /* This will override the rule applied to body elements for this selector */
     background-color: #2589bd;
